  context definition and should return a context definition which is modified or not.
- For preventing to update by editing element's value, data-im-control="unbind" is introduced. This attribute
  causes just assign the field value to checkbox, but it doesn't happen to update with clicking it.
- Added titles to almost all sample HTML files.
- [BUG FIX] IMLibContext class's getDataAtLastRecord method had a bug (wrong parameters for getValue).
- [BUG FIX] MediaAccess class didn't work for privileged access with users.
- [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
- [BUG FIX] Customized button names on the pagination control didn't work correctly.
- [BUG FIX] The INTERMediatorOnPage.doBeforeConstruct method won't be called other than just after page loaded.
- [BUG FIX] The DB_Null class's setupConnection() method returned false, but it prevent to following processing.

Ver.5.5 (October 13, 2016)
- Support PHP 7 and checking on 7.1.0 Release Candidate 2, too.
- Add "phpseclib_v2" (phpseclib 2.0.3) in "lib" directory for supporting PHP 7.
- Add "Constant-Time Encoding" in "lib" directory for phpseclib 2.0.
  <https://github.com/paragonie/constant_time_encoding>
- In SQL Database, NULL value of date or datetime type fields are falling down zero components data,
  such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
- Tests for sample web pages by Selenium Web Driver are introduced.
- The Access-Control-Allow-Origin header can be appended with variable $accessControlAllowOrigin
  in params.php file.
- Update sample_schema_mysql.txt, recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM.
- The getDataAtLastRecord(key) method in IMLibContext class is added.
- The setValue method of IMLibContext class returns affected node's id attribute values.
- If nullable and numeric field is updated/created with "" value, write the value as NULL.