@@ -18,6 +18,7 @@ Ver.5.6 (in development)
 - For preventing to update by editing element's value, data-im-control="unbind" is introduced. This attribute
   causes just assign the field value to checkbox, but it doesn't happen to update with clicking it.
 - Added titles to almost all sample HTML files.
+- Update recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM
 - [BUG FIX] IMLibContext class's getDataAtLastRecord method had a bug (wrong parameters for getValue).
 - [BUG FIX] MediaAccess class didn't work for privileged access with users.
 - [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
